2018-07-06  David Fenton  <david_fenton@apple.com>

        Layout Test imported/w3c/web-platform-tests/IndexedDB/interfaces.any.worker.html is flaky.
        https://bugs.webkit.org/show_bug.cgi?id=187372

        Unreviewed test gardening.

        Added [ Slow ] to the existing [ Pass Timeout ] expectation.

        * platform/mac-wk1/TestExpectations:

2018-07-06  Ryan Haddad  <ryanhaddad@apple.com>

        Rebaseline accessibility/ios-simulator/strong-password-field.html after r233578.

        Unreviewed test gardening.

        * accessibility/ios-simulator/strong-password-field-expected.txt:

2018-07-06  David Fenton  <david_fenton@apple.com>

        Layout Test imported/w3c/web-platform-tests/WebCryptoAPI/generateKey/successes_RSA-PSS.https.any.worker.html is flaky timeout.
        https://bugs.webkit.org/show_bug.cgi?id=187408

        Unreviewed test gardening.

        * platform/mac/TestExpectations:

2018-07-06  Antoine Quint  <graouts@apple.com>

        [Web Animations] Using a Web Animation leaks the Document
        https://bugs.webkit.org/show_bug.cgi?id=187088
        <rdar://problem/41392046>

        Reviewed by Darin Adler.

        * webanimations/leak-document-with-web-animation-expected.txt: Added.
        * webanimations/leak-document-with-web-animation.html: Added.
        * webanimations/resources/web-animation-leak-iframe.html: Added.

2018-07-06  Saam Barati  <sbarati@apple.com>

        Layout Test editing/selection/navigation-clears-editor-state.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=187389

        Reviewed by Mark Lam.

        * editing/selection/navigation-clears-editor-state.html:
        Make the test's internal time out mechanism longer since
        it's being hit on the bots.

2018-07-06  Nan Wang  <n_wang@apple.com>

        AX: setValue on text controls should send out key events
        https://bugs.webkit.org/show_bug.cgi?id=186690
        <rdar://problem/41169985>
