@@ -1,3 +1,9 @@
+2018-07-06  Brady Eidson  <beidson@apple.com>
+
+        This test is flaky. This unreviewed patch is my attempt to make it less so.
+
+        * storage/indexeddb/modern/opendatabase-after-storage-crash.html:
+
 2018-07-06  David Fenton  <david_fenton@apple.com>
 
         Layout Test imported/w3c/web-platform-tests/IndexedDB/interfaces.any.worker.html is flaky.
